# bscreen

./: Cargo.toml  build.rs
examples/: wayland-scanner.rs
src/: crop.rs  dynlib.rs  egl.rs  fontprovider.rs  fonttexturecache.rs  frag.glsl  genvec.rs  gfx.rs  gl.rs  input.rs  main.rs  ntree.rs  renderer.rs  texturepacker.rs  vert.glsl  wayland.rs  wayland_clipboard.rs  wayland_cursor.rs  wayland_egl.rs  wayland_input.rs  wayland_overlay.rs  wayland_screencopy.rs  welcome.rs  xkbcommon.rs
wayland-scanner/: Cargo.toml
wayland-scanner/src/: deserialize.rs  generate.rs  lib.rs  parse.rs
