[package]
name = "bscreen"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
glam = "0.29"
libc = "0.2"
log = "0.4"
png = "0.17"
wayland-backend = { version = "0.3", features = ["dlopen", "client_system"] }
wayland-client = { version = "0.31", features = ["log"] }
wayland-cursor = "0.31"
wayland-egl = "0.32"
wayland-protocols = { version = "0.32", features = ["client", "unstable", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

[build-dependencies]
gl_generator = "0.14"
