[workspace]
resolver = "2"
members = ["wayland-scanner"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
gl_generator = "0.14"
libc = "0.2"
log = "0.4"
png = "0.17"
quick-xml = { version = "0.37" }
wayland-scanner = { path = "./wayland-scanner" }

[package]
name = "bscreen"
version = "0.0.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
libc.workspace = true
log.workspace = true
png.workspace = true

[build-dependencies]
anyhow.workspace = true
gl_generator.workspace = true
wayland-scanner.workspace = true

[dev-dependencies]
anyhow.workspace = true
wayland-scanner.workspace = true

